# uf-math-gma-exams

./: .gitignore  APPROACH.md  README.md  build_indexes.py  build_tex.py  concerns.html  download_exams.py  extract_exams.py  extract_practice_problems.py  index.html  manifest.json  migrate_schema_v2.py  package-lock.json  package.json  prepare_mathjax.py  pyproject.toml  serious-errors.md  serious-figures.md  serious-other.md  validate_archive.py  validate_mathjax.mjs
exams/: review-corrections.json  review-serious.json  review-transformations.json
exams/algebra-first-year/: algebra-first-year-2013-jan-part-1.html  algebra-first-year-2013-jan-part-1.json  algebra-first-year-2013-jan-part-1.md  algebra-first-year-2013-may-part-1.html  algebra-first-year-2013-may-part-1.json  algebra-first-year-2013-may-part-1.md  algebra-first-year-2013-may-part-2.html  algebra-first-year-2013-may-part-2.json  algebra-first-year-2013-may-part-2.md  algebra-first-year-2014-jan-part-1.html  algebra-first-year-2014-jan-part-1.json  algebra-first-year-2014-jan-part-1.md  algebra-first-year-2014-may-part-2.html  algebra-first-year-2014-may-part-2.json  algebra-first-year-2014-may-part-2.md  algebra-first-year-2015-aug-part-1.html  algebra-first-year-2015-aug-part-1.json  algebra-first-year-2015-aug-part-1.md  algebra-first-year-2015-aug-part-2.html  algebra-first-year-2015-aug-part-2.json  algebra-first-year-2015-aug-part-2.md  (+181 more)
tests/: test_build_indexes.py  test_build_tex.py  test_download_exams.py  test_extract_exams.py  test_extract_practice_problems.py  test_validate_archive.py
(+3003 files in other folders)
