[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "uf-math-gma-exams"
version = "0.1.0"
description = "Archive and structured extraction of University of Florida mathematics exams"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.0",
  "pydantic>=2.8",
  "PyMuPDF>=1.26",
]

[project.scripts]
build-uf-math-gma-exam-indexes = "build_indexes:main"
build-uf-math-gma-exam-pdfs = "build_tex:main"
extract-uf-math-gma-exams = "extract_exams:main"
validate-uf-math-gma-exams = "validate_archive:main"

[tool.setuptools]
py-modules = ["build_indexes", "build_tex", "download_exams", "extract_exams", "validate_archive"]
